# PathTracer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
example/: Licences.txt
src/: acceleration_structure.cc  acceleration_structure.h  additional_math.cc  additional_math.h  arguments.cc  arguments.h  brdf.cc  brdf.h  compute_tangents.cc  compute_tangents.h  cpu_framebuffer.cc  cpu_framebuffer.h  main.cc  model_loader.cc  model_loader.h  ray_generator.cc  ray_generator.h  ray_program.cc  ray_program.h  render_settings.cc  render_settings.h  renderer.cc  renderer.h  ui.cc  ui.h  viewer.cc  viewer.h
tests/: fibonacci_sequence.py  fresnel_compare.py  test_main.cc
